--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,8 +9,6 @@ html
     nav(class="navbar navbar-light navbar-expand-lg")
       span(class="navbar-brand mb-0 h1") 
         img(src="/images/cs-logo2.png" width="30px")
-      button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation")
-        span(class="navbar-toggler-icon")
       div(class="collapse navbar-collapse" id="navbarNav")
         ul(class="navbar-nav")
           li(class="nav-item active")
@@ -19,6 +17,10 @@ html
             a(class="nav-link" href="/projects") Projects
           li(class="nav-item active")
             a(class="nav-link" href="/resume") Resume
+      a(href="https://www.linkedin.com/in/charly-sandoval-2017/" target="_blank") #[img(src="/images/linkedin.png" width="30rem" ) ] charly-sandoval-2017
+      a(href="https://github.com/csandoval331/login-app" target="_blank") #[img(src="/images/github.png" width="30rem")] csandoval331
+      button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation")
+        span(class="navbar-toggler-icon")
 
     div(class="container h-100")
       block content
