--- a/views/index.jade
+++ b/views/index.jade
@@ -3,10 +3,10 @@ extends layout
 block content
   div(class="jumbotron")
     div(class="row")
-      div(class="col-12 d-block d-md-none")
+      div(class="col-12 d-block d-lg-none")
               img(src="/images/welcome.png" class="img-fluid ")
       div(class="col-lg-4 col-md-12")
-        img(src="/images/selfie.jpg" class="img-fluid")
+        img(src="/images/selfie.jpg" class="img-fluid" style="margin-bottom:2rem")
       div(class="col-lg-8 col-md-12")
         div(class="row")
           div(class="col-12 d-none d-lg-block")
